# eww-niri-toolbar

./: Cargo.toml  README.md
src/: cache.rs  config.rs  main.rs  niri_socket.rs  serializable.rs
