[package]
name = "eww-niri-taskbar"
version = "0.2.0"
edition = "2021"

[dependencies]
#niri-ipc = { git = "https://github.com/YaLTeR/niri", tag = "v25.05.1" }
niri-ipc = { git = "https://github.com/YaLTeR/niri", tag = "v25.11" }
eyre = "0.6"
freedesktop-icons = "0.3.1"
freedesktop-desktop-entry = "=0.7.11"
toml = "0.8"
dirs = "5"
config = "0.15.11"
image = "0.25.9"
env_logger = "0.11.8"
log = "0.4.28"
serde = "1.0.228"
serde_json = "1.0.149"

[profile.release]
lto = "fat"
opt-level = 3
strip = true 
codegen-units = 1
debug = 0
debug-assertions = false
